--- a/data/build.gradle
+++ b/data/build.gradle
@@ -42,7 +42,9 @@ dependencies {
     //Retofit
     implementation "com.squareup.retrofit2:retrofit:$versions.retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$versions.retrofit_version"
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.4.1'
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$versions.retrofit_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$versions.okhttp3_version"
+    testImplementation "com.squareup.okhttp3:mockwebserver:$versions.okhttp3_version"
     implementation 'com.google.code.gson:gson:2.8.6'
 
     //Room
