--- a/versions.gradle
+++ b/versions.gradle
@@ -10,6 +10,7 @@ versions.android_gradle_plugin_version = '3.6.2'
 versions.appcompat_version = "1.1.0"
 versions.navigation_version = "2.2.2"
 versions.retrofit_version = "2.8.1"
+versions.okhttp3_version = "4.5.0"
 versions.room_version = "2.2.5"
 versions.constraint_layout = "1.1.3"
 versions.swipe_refresh_layout = "1.0.0"
