--- a/data/build.gradle
+++ b/data/build.gradle
@@ -29,6 +29,11 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
@@ -55,4 +60,13 @@ dependencies {
 
     testImplementation "junit:junit:$versions.junit_version"
     testImplementation "io.mockk:mockk:$versions.mockk_version"
+
+    // Android Testing Library's runner and rules
+    androidTestImplementation 'androidx.test:core:1.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
+    androidTestImplementation 'androidx.room:room-testing:2.2.5'
+    androidTestImplementation 'androidx.arch.core:core-testing:2.0.1'
+    androidTestImplementation 'androidx.arch.core:core-runtime:2.0.1'
 }
