--- a/.github/workflows/android-feature.yaml
+++ b/.github/workflows/android-feature.yaml
@@ -8,7 +8,7 @@ on:
       - '!release*'
 jobs:
   test:
-    name: Run Unit Tests
+    name: Run  Tests
     runs-on: ubuntu-18.04
 
     steps:
@@ -19,14 +19,11 @@ jobs:
           java-version: 1.8
       - name: Unit tests
         run: bash ./gradlew testDebugUnitTest
-
-      - uses: actions/checkout@v1
-      - name: set up JDK 1.8
-        uses: actions/setup-java@v1
+      - name: Instrumentation Test
+        uses: reactivecircus/android-emulator-runner@v2
         with:
-          java-version: 1.8
-      - name: Data Instrumented tests
-        run: bash ./gradlew data:connectedDebugAndroidTest
+        api-level: 29
+        script: ./gradlew data:connectedDebugAndroidTest
 
 
 
