--- a/.github/workflows/android-feature.yaml
+++ b/.github/workflows/android-feature.yaml
@@ -8,17 +8,21 @@ on:
       - '!release*'
 jobs:
   test:
-    name: Run  Tests
-    runs-on: ubuntu-18.04
+    name: Run Tests
+    runs-on: macos-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - name: set up JDK 1.8
+      - name: Checkout
+        uses: actions/checkout@v2
+      
+      - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+      
       - name: Unit tests
         run: bash ./gradlew testDebugUnitTest
+      
       - name: Instrumentation Test
         uses: reactivecircus/android-emulator-runner@v2
         with:
