--- a/.github/workflows/android-feature.yaml
+++ b/.github/workflows/android-feature.yaml
@@ -1,6 +1,6 @@
 name: Android Feature Branch CI
 
-on: 
+on:
   pull_request:
     branches:
       - '*'
@@ -8,14 +8,27 @@ on:
       - '!release*'
 jobs:
   test:
-    name: Run Unit Tests
-    runs-on: ubuntu-18.04
+    name: Run Tests
+    runs-on: macos-latest
 
     steps:
-    - uses: actions/checkout@v1
-    - name: set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Unit tests
-      run: bash ./gradlew testDebugUnitTest
+      - name: Checkout
+        uses: actions/checkout@v2
+      
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      
+      - name: Unit tests
+        run: bash ./gradlew testDebugUnitTest
+      
+      - name: Instrumentation Test
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 29
+          script: ./gradlew data:connectedDebugAndroidTest
+
+
+
+      
