--- a/data/build.gradle
+++ b/data/build.gradle
@@ -29,6 +29,11 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
@@ -42,7 +47,9 @@ dependencies {
     //Retofit
     implementation "com.squareup.retrofit2:retrofit:$versions.retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$versions.retrofit_version"
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.4.1'
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$versions.retrofit_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$versions.okhttp3_version"
+    testImplementation "com.squareup.okhttp3:mockwebserver:$versions.okhttp3_version"
     implementation 'com.google.code.gson:gson:2.8.6'
 
     //Room
@@ -50,7 +57,18 @@ dependencies {
     kapt "androidx.room:room-compiler:$versions.room_version"
     implementation "androidx.room:room-ktx:$versions.room_version"
     implementation "androidx.room:room-rxjava2:$versions.room_version"
+    implementation "androidx.paging:paging-runtime-ktx:$versions.paggination_version"
+    implementation "androidx.paging:paging-rxjava2-ktx:$versions.paggination_version"
 
     testImplementation "junit:junit:$versions.junit_version"
     testImplementation "io.mockk:mockk:$versions.mockk_version"
+
+    // Android Testing Library's runner and rules
+    androidTestImplementation 'androidx.test:core:1.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
+    androidTestImplementation 'androidx.room:room-testing:2.2.5'
+    androidTestImplementation 'androidx.arch.core:core-testing:2.0.1'
+    androidTestImplementation 'androidx.arch.core:core-runtime:2.0.1'
 }
