--- a/.github/workflows/android-feature.yaml
+++ b/.github/workflows/android-feature.yaml
@@ -27,7 +27,7 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 29
-          script: ./gradlew data:connectedDebugAndroidTest
+          script: ./gradlew connectedDebugAndroidTest
 
 
 
