--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ android {
             minifyEnabled false
             shrinkResources false
             debuggable true
+            testCoverageEnabled true
         }
 
         release {
