--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     apply from: 'versions.gradle'
+    apply from: 'jacoco.gradle'
 
     repositories {
         google()
@@ -13,6 +14,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$versions.navigation_version"
         classpath "org.jetbrains.kotlin:kotlin-allopen:$versions.kotlin_version"
+        classpath "com.dicedmelon.gradle:jacoco-android:$versions.jacoco_version"
     }
 }
 
