--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -5,7 +5,7 @@ on:
       - 'develop'
 jobs:
   run:
-    name: Run Tests
+    name: Coverage Report
     runs-on: macos-latest
 
     steps:
@@ -18,6 +18,7 @@ jobs:
           java-version: 1.8
 
       - name: Generate coverage report
+        uses: reactivecircus/android-emulator-runner@v2
         run: bash ./gradlew jacocoFullReport
 
       - name: Upload coverage to Codecov
