--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -27,4 +27,5 @@ jobs:
         uses: codecov/codecov-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          file: build/reporst/jacoco/jacocoFullReport.xml
+          file: ./build/reports/jacoco/jacocoFullReport.xml
+          fail_ci_if_error: true
