--- a/versions.gradle
+++ b/versions.gradle
@@ -31,6 +31,7 @@ versions.test_junit_version = "1.1.1"
 versions.espresso_version = "3.1.0"
 versions.paggination_version = "2.1.2"
 versions.jacoco_version= "0.1.4"
+versions.glide_version = "4.11.0"
 
 ext.versions = versions
 
