--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,12 +107,11 @@ dependencies {
     implementation "org.koin:koin-androidx-scope:$versions.koin_version"
     implementation "org.koin:koin-androidx-viewmodel:$versions.koin_version"
     implementation "org.koin:koin-androidx-ext:$versions.koin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.material:material:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
     androidTestImplementation "org.koin:koin-test:$versions.koin_version"
+
+    //Glide
+    implementation "com.github.bumptech.glide:glide:$versions.glide_version"
+    kapt "com.github.bumptech.glide:compiler:$versions.glide_version"
 
     //RX
     implementation "io.reactivex.rxjava2:rxandroid:$versions.rxandroid_version"
