--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,11 +91,15 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:$versions.fragment_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$versions.lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$versions.lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-reactivestreams-ktx:$versions.lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$versions.lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-extensions:$versions.lifecycle_version"
     implementation "androidx.constraintlayout:constraintlayout:$versions.constraint_layout"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:$versions.swipe_refresh_layout"
     implementation "androidx.paging:paging-runtime-ktx:$versions.paggination_version"
+    implementation "androidx.emoji:emoji:$versions.emoji_version"
+    implementation"androidx.emoji:emoji-appcompat:$versions.emoji_version"
+    implementation "androidx.emoji:emoji-bundled:$versions.emoji_version"
 
     // Material components : https://material.io/develop/android/
     implementation "com.google.android.material:material:$versions.material_components_version"
@@ -107,12 +111,11 @@ dependencies {
     implementation "org.koin:koin-androidx-scope:$versions.koin_version"
     implementation "org.koin:koin-androidx-viewmodel:$versions.koin_version"
     implementation "org.koin:koin-androidx-ext:$versions.koin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.material:material:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.2'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.2.2'
     androidTestImplementation "org.koin:koin-test:$versions.koin_version"
+
+    //Glide
+    implementation "com.github.bumptech.glide:glide:$versions.glide_version"
+    kapt "com.github.bumptech.glide:compiler:$versions.glide_version"
 
     //RX
     implementation "io.reactivex.rxjava2:rxandroid:$versions.rxandroid_version"
